--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "next-auth-demo",
+  "name": "next-trade-v2",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -10,12 +10,24 @@
     "format": "biome format --write"
   },
   "dependencies": {
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@types/bcrypt": "^6.0.0",
+    "@upstash/redis": "^1.35.3",
+    "bcrypt": "^6.0.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.542.0",
     "next": "15.5.0",
+    "next-themes": "^0.4.6",
     "next-view-transitions": "^0.3.4",
     "pg": "^8.16.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "redis": "^5.8.2",
+    "sonner": "^2.0.7",
+    "tailwind-merge": "^3.3.1",
+    "uuid": "^11.1.0",
     "zod": "^4.1.0"
   },
   "devDependencies": {
@@ -26,6 +38,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "tailwindcss": "^4",
+    "tw-animate-css": "^1.3.8",
     "typescript": "^5"
   }
 }
